--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "diablomedia/zendframework1-config": "^1.0.0",
         "diablomedia/zendframework1-loader": "^1.0.0",
         "diablomedia/zendframework1-acl": "^1.0.0",
-        "diablomedia/zendframework1-controller": "dev-master",
-        "diablomedia/zendframework1-view": "dev-master"
+        "diablomedia/zendframework1-controller": "^1.0.0",
+        "diablomedia/zendframework1-view": "^1.0.0"
     },
     "autoload": {
         "psr-0": {
