--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,11 @@
     },
     "autoload": {
         "psr-0": {
-            "Zend_": "src/"
-        }
+            "Zend_Navigation_": "src/"
+        },
+        "classmap": [
+            "src/Zend/Navigation.php"
+        ]
     },
     "autoload-dev": {
         "psr-0": {
@@ -31,7 +34,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
-        "phpstan/phpstan": "^0.9.2"
+        "phpstan/phpstan": "^0.9.2",
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "maglnet/composer-require-checker": "^0.1.6 | ^0.2.1",
+        "phpro/grumphp": "^0.14.0"
     },
     "include-path": [
         "./src"
@@ -40,8 +46,9 @@
         "exclude": ["/tests"]
     },
     "scripts": {
-        "test": "phpunit ./tests",
-        "test-with-coverage": "phpunit --coverage-clover=clover.xml ./tests",
-        "phpstan": "phpstan analyze -l4 -c phpstan.neon --no-progress ./src --ansi"
+        "test": "phpunit",
+        "test-with-coverage": "phpunit --coverage-clover=clover.xml",
+        "phpstan": "phpstan analyze -l4 -c phpstan.neon --no-progress ./ --ansi",
+        "style-check": "php-cs-fixer fix --dry-run -vv"
     }
 }
