--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,7 @@
 parameters:
+    excludes_analyse:
+        - %rootDir%/../../../tests/*
+        - %rootDir%/../../../vendor/*
     ignoreErrors:
         - '#Result of static method Zend_Loader::loadClass\(\) \(void\) is used\.#'
         - '#Call to an undefined method Zend_Controller_Router_Interface::getRoute\(\)\.#'
