--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,17 @@
 parameters:
+    level: 4
+    paths:
+        - ./
     excludes_analyse:
         - %rootDir%/../../../tests/*
         - %rootDir%/../../../vendor/*
     ignoreErrors:
-        - '#Result of static method Zend_Loader::loadClass\(\) \(void\) is used\.#'
-        - '#Call to an undefined method Zend_Controller_Router_Interface::getRoute\(\)\.#'
         - '#Method Zend_Navigation_Container::findBy\(\) should return \(iterable<Zend_Navigation_Page>&Zend_Navigation_Page\)\|null but returns array<Zend_Navigation_Page>\.#'
-        - '#Casting to .+ something that.s already .+\.#'
+        # Defensive coding
+        - 
+            message: '#Strict comparison using !== between null and null will always evaluate to false\.#'
+            path: %currentWorkingDirectory%/src/Zend/Navigation.php
+        # Defensive coding
+        - 
+            message: '#Result of \|\| is always true\.#'
+            path: %currentWorkingDirectory%/src/Zend/Navigation/Page.php
