--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,7 +11,15 @@ parameters:
         - 
             message: '#Strict comparison using !== between null and null will always evaluate to false\.#'
             path: %currentWorkingDirectory%/src/Zend/Navigation.php
-        # Defensive coding
         - 
             message: '#Result of \|\| is always true\.#'
             path: %currentWorkingDirectory%/src/Zend/Navigation/Page.php
+        -
+            message: '#Result of && is always false\.#'
+            path: %currentWorkingDirectory%/src/Zend/Navigation/Page.php
+        -
+            message: '#Result of && is always false\.#'
+            path: %currentWorkingDirectory%/src/Zend/Navigation/Page/Mvc.php
+        -
+            message: '#Result of && is always false\.#'
+            path: %currentWorkingDirectory%/src/Zend/Navigation/Page/Uri.php
