--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     "prefer-stable": true,
     "require": {
         "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0",
-        "diablomedia/zendframework1-exception": "^1.1.1",
-        "diablomedia/zendframework1-config": "^2.0.5",
-        "diablomedia/zendframework1-loader": "^1.0.5",
-        "diablomedia/zendframework1-acl": "^1.0.5",
-        "diablomedia/zendframework1-controller": "^1.0.6",
-        "diablomedia/zendframework1-view": "^1.0.5"
+        "fragotesac/zf1-exception": "^1.1.1",
+        "fragotesac/zf1-config": "^2.0.5",
+        "fragotesac/zf1-loader": "^1.0.5",
+        "fragotesac/zf1-acl": "^1.0.5",
+        "fragotesac/zf1-controller": "^1.0.6",
+        "fragotesac/zf1-view": "^1.0.5"
     },
     "autoload": {
         "psr-0": {
